--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "web-tech-server",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "app.js",
   "dependencies": {
     "adv-koa-router": "git+https://github.com/alexozornin/adv-koa-router.git",
     "alex-async-fs": "git+https://github.com/alexozornin/alex-async-fs.git",
     "koa": "^2.6.1",
+    "koa-bodyparser": "^4.2.1",
+    "koauth": "git+https://github.com/alexozornin/koauth.git",
     "mysql2": "^1.6.4",
     "sequelize": "^4.41.1",
     "web-tech-2018": "git+https://github.com/alexozornin/web-tech-2018.git"
