--- a/config.json
+++ b/config.json
@@ -30,7 +30,7 @@
     "database": {
         "name": "wt",
         "username": "root",
-        "password": "123",
+        "password": "fg14ah230bc1e7d2",
         "options": {
             "host": "127.0.0.1",
             "port": "",
